# durabilite.ai_calculator

./: README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: company.py  content.py  utils.py
