[project]
name = "ecologits-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ecologits @ git+https://github.com/HsuChieh/ecologits.git@feat/water-consumption",
    "pint>=0.24.4",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
]
